# RaycastEngine

./: .gitignore  CMakeLists.txt  README.md
dev_ops/: build_app.bat  clean_build.bat
resources/maps/: map_01.txt
src/Core/: Graphics.c  Graphics.h  Map.c  Map.h  Player.c  Player.h  Ray.c  Ray.h  Sprite.c  Sprite.h  Textures.c  Textures.h  Wall.c  Wall.h  upng.h
src/Core/Utilities/: Deffinitions.h  MacroFunction.h  Utils.c  Utils.h
src/Editor/: Editor.cpp  Editor.h  MapEditorApp.cpp
src/Game/: Main.c
